# hw_regmap

./: .gitignore  Cargo.toml  Readme.md  deny.toml  hpu_regif.toml  setup.sh
.github/workflows/: make_release.yml
config/: example.toml
config/debug/: default.toml  offset.toml
config/debug/many/: slice_a.toml  slice_b.toml
src/: flat.rs  generator.rs  lib.rs  main.rs  tera.rs
src/regmap/: mod.rs  parser.rs
templates/: module.sv  pkg.sv  regmap_addr_pkg.sv  regmap_pkg.sv
templates/docs/: fmt_as.json  fmt_as.md
templates/module/: default.sv  io.sv  param.sv  read.sv  write.sv
templates/param/: param.sv
templates/pkg/: addr.sv  struct.sv
templates/read/: param.sv  read.sv  read_notify.sv
templates/write/: none.sv  write.sv  write_action.sv  write_notify.sv
