[package]
name = "regmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
toml = {version = "*", features = ["preserve_order"]}
thiserror = "1.0"
anyhow = "1.0"
indexmap = {version = "2.2.6", features = ["serde"]}
