[package]
name = "hw_regmap"
version = "0.2.0"
edition = "2024"
homepage = "https://zama.ai/"
repository = "https://github.com/zama-ai/hw_regmap"
readme = "Readme.md"
license = "BSD-3-Clause-Clear"
description = "hw_regmap: A register map generation tool."
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
getset = "0.1.2"
tera = { version = "1.20.1", default-features = false }
regex = "1.10.4"
serde_json = "1.0.138"
